# YouthCode

./: .gitignore  AGENTS.md  CLAUDE.md  E2E_QA_LOG.md  HANDOFF.md  IMPLEMENTATION_ROADMAP.md  Makefile  Mobile_UI_Issues.md  Project_spec.md  Research_Dashboard_UI_Guide.md  Shared_Backend_plan.md  Web_Dashboard_UI_Handoff.md  docker-compose.override.yml  docker-compose.yml  mobileAppMigration.md  stitchDesignReference.txt
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/docs/: api_examples.md  assistant_safety_contract.md  frontend_contract.md  mobile_integration.md  openapi.json  research_dashboard_integration.md
apps/api/tests/: conftest.py  test_alembic_config.py  test_assistant_context_api.py  test_assistant_safety.py  test_auth.py  test_component_scoring.py  test_config.py  test_db_base.py  test_demo_scenarios.py  test_demo_script.py  test_environmental_context_api.py  test_environmental_enrichment_providers.py  test_exports_api.py  test_forecast_public_api.py  test_frontend_contract.py  test_habitat_answers.py  test_health.py  test_health_services.py  test_identification_providers.py  test_identifications_api.py  test_intelligence_cards_api.py  test_jobs.py  test_media_api.py  test_nearby_records_api.py  test_observations_api.py  test_pipeline.py  test_pipeline_status_api.py  test_privacy.py  test_rate_limit.py  test_regions_api.py  test_research_observations_api.py  test_sampling_gaps_api.py  test_sampling_grid_generation.py  test_scoring_model.py  (+10 more)
(+418 files in other folders)
